Activity ver mision paciente

--- a/Diabetest2/app/src/main/AndroidManifest.xml
+++ b/Diabetest2/app/src/main/AndroidManifest.xml
@@ -143,8 +143,16 @@
         <activity android:name=".profesional.modmision.Modmisp" />
         <activity android:name=".profesional.modmision.Basico" />
         <activity android:name=".profesional.modmision.Pasosmod" />
-        <activity android:name=".profesional.Modpasmisg1"></activity>
-        <activity android:name=".profesional.misioncruds.Recursos_crud"></activity>
+        <activity android:name=".profesional.Modpasmisg1" />
+        <activity android:name=".profesional.misioncruds.Recursos_crud" />
+        <activity
+            android:name=".paciente.VerMisionPaciente"
+            android:label="@string/title_activity_ver_mision_paciente"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".paciente.MisionPaciente"
+            android:label="@string/title_activity_mision_paciente"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
