--- a/Diabetest2/app/src/main/AndroidManifest.xml
+++ b/Diabetest2/app/src/main/AndroidManifest.xml
@@ -133,6 +133,7 @@
         <activity android:name=".profesional.crearmisgmedi" />
         <activity android:name=".profesional.misioncruds.Medicamentosm" />
         <activity android:name=".profesional.misioncruds.Forosm" />
+        <activity android:name=".profesional.misioncruds.AsignacionRecursos"/>
         <activity android:name=".profesional.misioncruds.habitosm" />
         <activity android:name=".profesional.misioncruds.Encuestas" />
         <activity android:name=".profesional.misioncruds.mededit" />
@@ -149,12 +150,7 @@
             android:name=".paciente.VerMisionPaciente"
             android:label="@string/title_activity_ver_mision_paciente"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".paciente.MisionPaciente"
-            android:label="@string/title_activity_mision_paciente"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".profesional.modmision.Modpasos" />
-        <activity android:name=".paciente.VerRecursosMision" />
         <activity android:name=".paciente.VerRecursosMisionPaciente" />
         <activity android:name=".profesional.modmision.Modpaso" />
         <activity android:name=".profesional.misioncruds.MisionRecursosLista" />
