--- a/Diabetest2/app/src/main/AndroidManifest.xml
+++ b/Diabetest2/app/src/main/AndroidManifest.xml
@@ -156,10 +156,11 @@
         <activity android:name=".profesional.misioncruds.MisionRecursosLista" />
         <activity android:name=".profesional.misioncruds.RecursosAsignadosMis" />
         <activity android:name=".profesional.Encuesta1" />
-        <activity android:name=".profesional.Encuesta2"></activity>
+        <activity android:name=".profesional.Encuesta2" />
         <activity android:name=".paciente.encuestas.Encuesta" />
-        
-        <activity android:name=".profesional.PerfilDeTratamiento"></activity>
+        <activity android:name=".profesional.PerfilDeTratamiento" />
+        <activity android:name=".comunes.chattest.Mainchat" />
+        <activity android:name=".comunes.chattest.SignInActivity"></activity>
     </application>
 
 </manifest>
