--- a/Diabetest2/app/build.gradle
+++ b/Diabetest2/app/build.gradle
@@ -20,6 +20,17 @@ android {
     }
 }
 
+ext {
+    smackVersion = '4.2.4'
+    supportLibVersion = '27.1.0'
+}
+
+//Ge rid of problem described here : https://stackoverflow.com/questions/31049735/can-not-run-application-below-lollipop
+configurations {
+    all*.exclude group: 'xpp3', module: 'xpp3'
+}
+
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:support-v4:26.1.0'
@@ -45,5 +56,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation('com.github.timigod:android-chat-ui:v0.1.3') {
+        exclude group: "com.android.support"
+    }
+    implementation "org.igniterealtime.smack:smack-tcp:$smackVersion"
+    implementation "org.igniterealtime.smack:smack-experimental:$smackVersion"
+    implementation "org.igniterealtime.smack:smack-android:$smackVersion"
 
 }
