--- a/Diabetest2/build.gradle
+++ b/Diabetest2/build.gradle
@@ -25,6 +25,7 @@ allprojects {
         maven {
             url 'https://maven.google.com/'
             name 'Google'
+            maven { url 'https://jitpack.io' }
         }
     }
 }
